--- a/index.css
+++ b/index.css
@@ -24,8 +24,8 @@ header{
 
 #avatar-img{
     display: block;
-    width: 380px;
-    /* width: 30%; */
+    /* width: 380px; */
+    width: 30%;
     margin-left: auto;
     margin-right: auto;
 }
