--- a/index.css
+++ b/index.css
@@ -45,7 +45,7 @@ nav{
     font-size: 35px;
     flex-grow: 1;
     flex-shrink: 0;
-    flex-basis: 200;
+    flex-basis: 200px;
     font-family: consolas;
 }
 
