--- a/index.css
+++ b/index.css
@@ -1,3 +1,12 @@
+*{
+    font-family: consolas;  
+}
+
+a{
+    color: white;
+    text-decoration: none;
+}
+
 body{
     background-color: black;
     margin-top: 40px;
@@ -15,11 +24,15 @@ header{
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
+    text-align: center;
+
+    align-content: center;
+    font-size: 300%;
+    padding: 50px 0px 50px 0px;
 }
 
 .header-item{
     flex-grow: 1;
-    /* flex-basis: 200; */
 }
 
 #avatar-img{
@@ -45,7 +58,7 @@ nav{
     font-size: 35px;
     flex-grow: 1;
     flex-shrink: 0;
-    flex-basis: 200px;
+    flex-basis: 200;
     font-family: consolas;
 }
 
