--- a/index.css
+++ b/index.css
@@ -7,6 +7,10 @@ a{
     text-decoration: none;
 }
 
+#author{
+    font-size: 4rem;
+}
+
 body{
     background-color: black;
     margin-top: 40px;
@@ -48,29 +52,28 @@ nav{
     flex-wrap: wrap;
     position: sticky;
     margin: 30px 0 0 0;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 
 .btn{
     border: none;
     background-color: black;
     color: #4AF626;
-    font-size: 35px;
+    font-size: 3rem;
     flex-grow: 1;
     flex-shrink: 0;
-    flex-basis: 200;
-    font-family: consolas;
+    align-content: center;
+    justify-content: center;
+
 }
 
 #par{
     color: white;
     position: relative;
     text-align: center;
-    font-family: consolas;
 }
 
 p{
     position: relative;
     z-index: 0;
-    font-family: consolas;
 }
