--- a/index.css
+++ b/index.css
@@ -52,7 +52,7 @@ nav{
     flex-wrap: wrap;
     position: sticky;
     margin: 30px 0 0 0;
-    justify-content: space-between;
+    justify-content: space-evenly;
 }
 
 .btn{
@@ -62,8 +62,11 @@ nav{
     font-size: 3rem;
     flex-grow: 1;
     flex-shrink: 0;
+    flex-basis: 20rem;
     align-content: center;
     justify-content: center;
+
+    max-width: 20rem;
 
 }
 
